fix: Fix style bugs related z-index

--- a/src/star-2023/star-common.css
+++ b/src/star-2023/star-common.css
@@ -23,6 +23,7 @@
     padding:0.2rem 1rem;
     background-color: rgba(50, 50, 100, 10);
     z-index: 999;
+    transform: translateZ(999px);
   }
 
   h1{
